Made Vendor button always announce current state of the BT controlled function
